# xarray-enmap

./: .gitignore  CHANGES.md  README.md  environment.yml  pyproject.toml
xarray_enmap/: cli.py  xarray_enmap.py
xrenmap/: xrenmap.py
