[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "xrenmap"
dynamic = ["version"]
authors = [
  {name = "Pontus Lurcock", email = "pontus.lurcock@brockmann-consult.de"}
]
description = """\
  xarray backend for EnMAP data archives\
  """
keywords = [
  "analysis ready data", "data science", "datacube", "xarray", "zarr"
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "rioxarray",
  "shapely",
  "xarray",
]

[tool.setuptools.dynamic]
version = {attr = "xrenmap.__version__"}

[tool.setuptools.packages.find]
exclude = [
  "test*",
  "doc*",
  "site*",
  "htmlcov*"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "flake8"
]
doc = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python"
]

[project.urls]
Documentation = "https://github.com/xcube-dev/xrenmap/blob/main/README.md"
Issues = "https://github.com/xcube-dev/xrenmap/issues"
Changelog = "https://github.com/xcube-dev/xrenmap/blob/main/CHANGES.md"
Repository = "https://github.com/xcube-dev/xrenmap"

[project.entry-points."xarray.backends"]
enmap = "xrenmap.xrenmap:EnmapEntrypoint"
